[tool.poetry]
name = "hack"
version = "0.1.0"
description = ""
authors = ["Alexej Disterhoft <alexej@disterhoft.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^4.25.1"
cryptography = "^41.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
